fixed download button icon not appearing properly on small screens

--- a/app/assets/stylesheets/components/_icons.scss
+++ b/app/assets/stylesheets/components/_icons.scss
@@ -13,13 +13,13 @@
   &--download {
     background-image: image-url('icons/download.svg');
     background-size: cover;
-    width: rem-calc(17); height: rem-calc(19);
+    width: rem-calc(23); height: rem-calc(23);
 
     display: block;
 
     @include breakpoint($small) { 
-      width: rem-calc(17); 
-      height: rem-calc(16); 
+      width: rem-calc(20); 
+      height: rem-calc(19); 
     }
   }
 
